--- a/astro/src/components/HomeNavbar.astro
+++ b/astro/src/components/HomeNavbar.astro
@@ -20,5 +20,5 @@ const isHome = currentPath === "/" || currentPath === "/index.html";
   data-nav-pos={isHome ? "bottom" : "top"}
   data-page={isHome ? "home" : "inner"}
 >
-  <NavbarContent currentPath={currentPath} isHome={isHome} />
+  <NavbarContent currentPath={currentPath} />
 </nav>
