--- a/astro/src/pages/contact.astro
+++ b/astro/src/pages/contact.astro
@@ -132,5 +132,5 @@ const localBusinessSchema = getLocalBusinessSchema();
   </section>
 
   <!-- Structured Data: LocalBusiness -->
-  <script type="application/ld+json" set:html={JSON.stringify(localBusinessSchema)} />
+  <script type="application/ld+json" is:inline set:html={JSON.stringify(localBusinessSchema)} />
 </BaseLayout>
