--- a/astro/src/pages/gallery.astro
+++ b/astro/src/pages/gallery.astro
@@ -66,7 +66,7 @@ const displaysSlides = [
         id="eventCarousel"
         slides={eventSlides}
         intervalMs={5000}
-        client:idle
+        client:visible
       />
     </div>
   </section>
@@ -81,7 +81,7 @@ const displaysSlides = [
         id="workshopCarousel"
         slides={workshopSlides}
         intervalMs={5000}
-        client:idle
+        client:visible
       />
     </div>
   </section>
@@ -96,7 +96,7 @@ const displaysSlides = [
         id="displaysCarousel"
         slides={displaysSlides}
         intervalMs={5000}
-        client:idle
+        client:visible
       />
     </div>
   </section>
@@ -107,7 +107,7 @@ const displaysSlides = [
       <h2 id="case-studies-heading" class="heading-blush-bg mb-5 text-center">
         Success Stories
       </h2>
-      <SuccessStoriesCarousel client:idle />
+      <SuccessStoriesCarousel client:visible />
     </div>
   </section>
 
