--- a/astro/src/layouts/BaseLayout.astro
+++ b/astro/src/layouts/BaseLayout.astro
@@ -57,8 +57,8 @@ const mainPadding = isHome ? "" : "pt-2";
       <slot />
     </main>
     <Footer />
-    <script src="/scripts/accordion.js" defer></script>
-    <script src="/scripts/navbar.js" defer></script>
-    <script src="/scripts/anchor-nav.js" defer></script>
+    <script src="/scripts/accordion.js" defer is:inline></script>
+    <script src="/scripts/navbar.js" defer is:inline></script>
+    <script src="/scripts/anchor-nav.js" defer is:inline></script>
   </body>
 </html>
