--- a/astro/src/pages/about.astro
+++ b/astro/src/pages/about.astro
@@ -138,7 +138,7 @@ const clientLogos = [
             </p>
           </div>
           <div class="flex items-stretch">
-            <AboutImageCarousel id="workshopCarousel" slides={workshopSlides} client:idle />
+            <AboutImageCarousel id="workshopCarousel" slides={workshopSlides} client:visible />
           </div>
         </div>
       </div>
@@ -163,7 +163,7 @@ const clientLogos = [
       <div class="workshop-section">
         <div class="grid gap-8 lg:grid-cols-2 lg:items-stretch">
           <div class="order-2 lg:order-1 flex items-stretch">
-            <AboutImageCarousel id="eventCarousel" slides={eventSlides} client:idle />
+            <AboutImageCarousel id="eventCarousel" slides={eventSlides} client:visible />
           </div>
           <div class="order-1 lg:order-2 about-content flex flex-col">
             <p class="lead text-charcoal">
@@ -219,7 +219,7 @@ const clientLogos = [
             </p>
           </div>
           <div class="flex items-stretch">
-            <AboutImageCarousel id="futureCarousel" slides={futureSlides} client:idle />
+            <AboutImageCarousel id="futureCarousel" slides={futureSlides} client:visible />
           </div>
         </div>
       </div>
